[gd_scene load_steps=4 format=3 uid="uid://dughvbq6sbdbv"]

[ext_resource type="Script" path="res://scripts/levels/level_3.gd" id="1_p4b2s"]
[ext_resource type="PackedScene" uid="uid://cs6sy82mme6s4" path="res://scenes/ui/zoomies_ui.tscn" id="2_5wvg8"]
[ext_resource type="PackedScene" uid="uid://gi8h4kub3elw" path="res://scenes/cats/random.tscn" id="3_u1ifl"]

[node name="Level3" type="Node2D"]
script = ExtResource("1_p4b2s")

[node name="ZoomiesUI" parent="." instance=ExtResource("2_5wvg8")]
position = Vector2(-960, -540)

[node name="Cat1" parent="." instance=ExtResource("3_u1ifl")]
unique_name_in_owner = true
position = Vector2(-907, -388)
scale = Vector2(0.3, 0.3)

[node name="Cat2" parent="." instance=ExtResource("3_u1ifl")]
unique_name_in_owner = true
position = Vector2(-285, -388)
scale = Vector2(0.3, 0.3)

[node name="Cat3" parent="." instance=ExtResource("3_u1ifl")]
unique_name_in_owner = true
position = Vector2(343, -388)
scale = Vector2(0.3, 0.3)

[node name="Cat4" parent="." instance=ExtResource("3_u1ifl")]
unique_name_in_owner = true
position = Vector2(-285, -16)
scale = Vector2(0.3, 0.3)

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="ready" from="." to="." method="_on_ready"]
